Create 'getComputerChoiceFunction' Function, randomly picks rsults and returns into the console log. Used array and maths random random with math floor.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <script>
+
+    function getComputerChoice() {
+        let choices = ['Rock','Paper','Scissors'];
+        let result = (choices[Math.floor(Math.random()*3)]);
+        return result
+    }
+
+    console.log(getComputerChoice());
+
+
+
+
+    </script>
+
 </body>
-</html>
+</html>s
