single round started work with 'tie' result. displays result of 'tie' in a <p>.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <button class="paper choice">Paper</button>
             <button class="Scissors choice">Scissors</button>
         </div>
+        <p id="roundWinner">round result will be here</p>
 
     <script src="rock-paper-scissors.js"></script>
 </body>
