Game works, each round result is a new li and winner is disaplyed. hHwever after reporting winner, the scorecards are not reset. Need to add logic that resets score cards, clears list items when game finishes to start a new game.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
             <button class="paper choice">Paper</button>
             <button class="Scissors choice">Scissors</button>
         </div>
-        <p id="roundWinner">round result will be here</p>
+        <p id="roundWinner">round result  will be here</p>
+        <div id="runningScore">
+            <div class="player scoreCard">Your score:<span class="player score" >0</span></div>
+            <div class="computer scoreCard">Computer score:<span class="computer score">0</span></div>
+        </div>
+        <ul id="resultsList">
+        </ul>
 
     <script src="rock-paper-scissors.js"></script>
 </body>
