ui finished and logic finished Each round result displayed. Winner of game displayed and relay button  added after, game finshes.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
             <button class="paper choice">Paper</button>
             <button class="Scissors choice">Scissors</button>
         </div>
-        <p id="roundWinner">round result  will be here</p>
+        <p id="roundWinner">Click on a option above to play rock, paper, scissors against the computer.<br>
+                            Best out 5 wins, good luck!<br>
+                            Round win = 1 points<br>
+                            Round tie = 0 points
+        </p>
         <div id="runningScore">
             <div class="player scoreCard">Your score:<span class="player score" >0</span></div>
             <div class="computer scoreCard">Computer score:<span class="computer score">0</span></div>
