Corrected game rules. Adjusted playGame if checks, so now the winner is the first player to get 5 points

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             <button class="paper choice">Paper</button>
             <button class="Scissors choice">Scissors</button>
         </div>
-        <p id="roundWinner">Click on a option above to play rock, paper, scissors against the computer.<br>
-                            Best out 5 wins, good luck!<br>
+        <p id="roundWinner">Click on an option above, to play against the computer.<br>
+                            First to 5 points wins, good luck!<br>
                             Round win = 1 points<br>
                             Round tie = 0 points
         </p>
